syntax = "proto3";

option csharp_namespace = "Identity_service";

package model;



message UserProto{
	int32 id = 1;
	string userName = 2;
	string firstName = 3;
	string lastName = 4;
	string email = 5;
	bool emailConfirmed = 6;
}
